created first version of a header

--- a/cinema/src/main/resources/templates/html/index.html
+++ b/cinema/src/main/resources/templates/html/index.html
@@ -5,9 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Cinema</title>
 </head>
 <body>
+
+    <header>
+        <img src="https://cdn.discordapp.com/attachments/1094256351284318209/1094280342426374325/Screenshot_2023-04-08_at_1easasdasdasd.11.55.png" alt="logo">
+            
+    <div class="dropdown">
+        <button class="dropbtn">Львів, ТРЦ Мегаполіс</button>
+        <div class="dropdown-content">
+        <a href="#">Львів, ТРЦ Мегаполіс</a>
+        <a href="#">Львів, ТРЦ Мегаполіс</a>
+        <a href="#">Львів, ТРЦ Мегаполіс</a>
+    </div>
+  </div>
+
+        <nav>
+            <ul>
+                <li>СКОРО</li>
+                <li>ФІЛЬМИ</li>
+                <li>рОЗКЛАД СЕАНСІВ</li>
+                <li>ПРО НАС</li>
+            </ul>
+        </nav>
+        <button>Увійти</button>
+    </header>
+
     <script src="../js/script.js"></script>
+    <div class="movieWrapper">
+
+        <article class="movieFrame">
+            <h2>Мавка. Лісова пісня</h2>
+            <img src="https://miromax.film/images/cinema/ky1-532.jpg" alt="movie image">
+            <p><span>0+ </span> Комедія, Фентезі, Анімація</p>
+            <h5>Сьогодні, <time>08 квітня</time></h5>
+            <button class="movieBtn">
+                <h4>18:00</h4>
+                <p><b>160</b>uah</p>
+            </button>
+        </article>
+
+        <article class="movieFrame">
+            <h2>Мавка. Лісова пісня</h2>
+            <img src="https://miromax.film/images/cinema/ky1-532.jpg" alt="movie image">
+            <p><span>0+ </span> Комедія, Фентезі, Анімація</p>
+            <h5>Сьогодні, <time>08 квітня</time></h5>
+            <button class="movieBtn">
+                <h4>18:00</h4>
+                <p><b>160</b>uah</p>
+            </button>
+        </article>
+
+        <article class="movieFrame">
+            <h2>Мавка. Лісова пісня</h2>
+            <img src="https://miromax.film/images/cinema/ky1-532.jpg" alt="movie image">
+            <p><span>0+ </span> Комедія, Фентезі, Анімація</p>
+            <h5>Сьогодні, <time>08 квітня</time></h5>
+            <button class="movieBtn">
+                <h4>18:00</h4>
+                <p><b>160</b>uah</p>
+            </button>
+        </article>
+
+        <article class="movieFrame">
+            <h2>Мавка. Лісова пісня</h2>
+            <img src="https://miromax.film/images/cinema/ky1-532.jpg" alt="movie image">
+            <p><span>0+ </span> Комедія, Фентезі, Анімація</p>
+            <h5>Сьогодні, <time>08 квітня</time></h5>
+            <button class="movieBtn">
+                <h4>18:00</h4>
+                <p><b>160</b>uah</p>
+            </button>
+        </article>
+    </div>
 </body>
 </html>
