--- a/cinema/src/main/resources/templates/css/style.css
+++ b/cinema/src/main/resources/templates/css/style.css
@@ -1,8 +1,83 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-body{
-    background-color: black;
+.movieWrapper{
+    display: flex;
+    width: 1200px;
+    max-width: calc(100% - 20px);
+    margin: 0 auto;
+    padding: 0 10px;
+    flex-wrap: wrap;
 }
+
+.movieFrame{
+    padding: 2rem;
+    background-color: wheat;
+    max-width: calc(34% - 20px);
+    width: fit-content;
+    height: fit-content;
+    border-radius: 30px;
+    margin: 1%;
+
+}
+
+.movieFrame img{
+    height: 60%;
+}
+
+.movieBtn{
+    background-color: white;
+    border-radius: 30px;
+    border: 0;
+    padding: 20px 40px;
+    margin-top: 12px;
+    box-shadow: 6px 5px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: rgba(100, 100, 100, 0.2);
+    border-radius: 0;
+  }
