--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -29,14 +29,14 @@
             <ul>
                 <li>СКОРО</li>
                 <li>ФІЛЬМИ</li>
-                <li>рОЗКЛАД СЕАНСІВ</li>
+                <li>РОЗКЛАД СЕАНСІВ</li>
                 <li>ПРО НАС</li>
             </ul>
         </nav>
         <button>Увійти</button>
     </header>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <div class="movieWrapper">
 
         <article class="movieFrame">
