--- a/cinema/src/main/resources/templates/css/popup.css
+++ b/cinema/src/main/resources/templates/css/popup.css
@@ -12,6 +12,20 @@
     display: none;
 }
 
+.regPopup{
+    background-color: #fff;
+    padding: 42px 20px 0 20px;
+    position: fixed;
+    width: 515px;
+    height: 542px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 22px;
+    text-align: center;
+    display: none;
+}
+
 #formPopup{
     display: flex;
     flex-direction: column;
@@ -19,8 +33,8 @@
 }
 
 #formPopup input{
-    width: 85%;
-    margin: 16px auto;
+    width: 350px;
+    margin: 12px auto;
     border: 2px solid black;
     border-radius: 50px;
     padding: 12px;
@@ -51,4 +65,20 @@
     height: 120vh;
     background-color: rgba(0, 0, 0, 0.6);
     display: none;
+}
+
+#createAccBtn{
+    width: 260px;
+    height: 60px;
+    background: #0A063F;
+    border-radius: 21px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 18px;
+    margin: 22px auto;
+}
+
+.regPopup h2{
+    margin-bottom: 16px;
 }
