--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-*{
+*, *::after, *::before{
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -6,22 +6,17 @@
 
 .movieWrapper{
     display: flex;
-    width: 1200px;
-    max-width: calc(100% - 20px);
-    margin: 0 auto;
-    padding: 0 10px;
     flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 2rem;
 }
 
 .movieFrame{
     padding: 2rem;
     background-color: wheat;
-    max-width: calc(34% - 20px);
-    width: fit-content;
+    width: max-content;
     height: fit-content;
     border-radius: 30px;
-    margin: 1%;
-
 }
 
 .movieFrame img{
