--- a/cinema/src/main/resources/static/css/header.css
+++ b/cinema/src/main/resources/static/css/header.css
@@ -28,10 +28,12 @@ header ul li{
 
 header button{
     margin-right: 40px;
+    font-size: 17px;
     padding: 12px 26px;
     background-color: white;
     border: 0;
-    border-radius: 30px;
+    border-radius: 35px;
     color: black;
     font-weight: bold;
+    cursor: pointer;
 }
