--- a/cinema/src/main/resources/static/css/popup.css
+++ b/cinema/src/main/resources/static/css/popup.css
@@ -1,87 +1,127 @@
-.loginPopup{
+.login-popup{
     background-color: #fff;
     padding: 30px 40px;
     position: fixed;
     width: 400px;
-    height: 300px;
-    top: 50%;
+    height: 315px;
+    top: -150%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 22px;
+    opacity: 0;
     text-align: center;
-    display: none;
+    transition: all 0.7s ease;
     z-index: 999;
 }
 
-.regPopup{
+.registration-popup{
     background-color: #fff;
     padding: 42px 20px 0 20px;
     position: fixed;
     width: 515px;
-    height: 542px;
-    top: 50%;
+    height: 580px;
+    top: -150%;
     left: 50%;
     transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.7s ease;
     border-radius: 22px;
     text-align: center;
-    display: none;
     z-index: 999;
 }
+.active{
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    top: 50%;
+}
 
-#formPopup{
+#login-form, #registration-form{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    opacity: 1;
 }
 
-#formPopup input{
+#login-form h2, #registration-form h2{
+    margin: 12px;
+}
+
+.input-field{
     width: 350px;
     margin: 12px auto;
-    border: 2px solid black;
+    border: 2px solid #626161;
     border-radius: 50px;
     padding: 12px;
-    font-size: larger;
+    font-size: 20px;
+
+}
+#login-form input::placeholder, #registration-form input::placeholder{
+    padding: 15px;
+    font-size: 19px;
+    opacity: 0.8;
+
 }
 
-#loginPopupBtn{
-    background-color: #0A063F;
-    border-radius: 22px;
+#login-popup-button, #create-account-button{
+    background-color: #183d81;
     color: #fff;
+    border-style: none;
+    border-radius: 50px;
+    font-size: larger;
     padding: 12px 25px;
     width: 220px;
     height: 60px;
     margin: 12px auto;
+    cursor: pointer;
 }
-
-#regPopupBtn{
+#login-form-button{
+    font-size: 1.1em;
     background: 0;
-    border: 0;
+    border:0 none; !important;
     color: #000;
     font-weight: bold;
+    margin: 10px 20px;
+    cursor: pointer;
 }
 
-#backgroundPopup{
+#registration-popup-button{
+    font-size: 1.1em;
+    background: 0;
+    border: 0;
+    margin: 10px 20px;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#background-popup{
     position: fixed;
-    top: 0;
-    width: 100vw;
-    height: 120vh;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
     background-color: rgba(0, 0, 0, 0.6);
-    display: none;
-    z-index: 988;
+    transition-delay: 0.35s;
+    transition: 0.3s;
+    z-index: 990;
+    opacity: 1;
+
 }
 
-#createAccBtn{
-    width: 260px;
-    height: 60px;
-    background: #0A063F;
-    border-radius: 21px;
-    color: #fff;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 18px;
-    margin: 22px auto;
+.login-popup #close-button{
+    position: absolute;
+    top: 25px;
+    right:25px;
+    font-size: 30px;
+    cursor: pointer;
+}
+#close-login-button, #close-registration-button{
+    position: absolute;
+    top: 25px;
+    right:25px;
+    font-size: 30px;
+    cursor: pointer;
 }
 
-.regPopup h2{
+.registration-popup h2{
     margin-bottom: 16px;
 }
