Changed project logo

--- a/cinema/src/main/resources/static/css/popup.css
+++ b/cinema/src/main/resources/static/css/popup.css
@@ -63,7 +63,7 @@
 }
 
 #login-popup-button, #create-account-button{
-    background-color: #183d81;
+    background-color: #091f41;
     color: #fff;
     border-style: none;
     border-radius: 50px;
