added dynamic movie cards with animation

--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -70,22 +70,7 @@
         </div>
     </section>
 
-    <div class="movie-wrapper">
-        <article class="movie-frame">
-            <img src="https://miromax.film/images/cinema/ky1-532.jpg" alt="movie image">
-        </article>
-
-        <article class="movie-frame">
-            <img src="https://miromax.film/images/cinema/ky1-531.jpg" alt="movie image">
-        </article>
-
-        <article class="movie-frame">
-            <img src="https://miromax.film/images/cinema/ky1-527.jpg" alt="movie image">
-        </article>
-
-        <article class="movie-frame">
-            <img src="https://miromax.film/images/cinema/ky1-525.jpg" alt="movie image">
-        </article>
+    <div id="card-container" class="card-container">
     </div>
 </main>
 
