--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -8,27 +8,71 @@ body {
     background-color: #000;
 }
 
-.movie-wrapper {
-    width: 1400px;
+.card-container {
     display: flex;
+    margin: auto;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 30px;
-    margin: 0 auto;
+    gap: 2em;
 }
 
-.movie-frame {
-    width: 260px;
-    height: 320px;
-    border-radius: 30px;
-}
-
-.movie-frame img {
-    width: 100%;
+.card {
+    position: relative;
+    width: 20rem;
+    height: 480px;
     border-radius: 20px;
-    height: 380px;
-    object-fit: cover;
+    box-shadow: 5px 5px 20px black;
+    overflow: hidden;
 }
+
+.card img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease-out;
+}
+
+.card-body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    background-color: rgba(217, 217, 217, 0.8);
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-body h4 {
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.card-body p {
+    margin: 0.5em 0;
+    font-size: 1.2rem;
+}
+
+.card-body .fat {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.card-body .centered {
+    margin-top: 80px;
+    text-align: center;
+}
+
+.card:hover .card-body {
+    opacity: 1;
+}
+
 
 .movieBtn {
     background-color: white;
