Added card movie animation, refactored js directory structure

--- a/cinema/src/main/resources/static/css/popup.css
+++ b/cinema/src/main/resources/static/css/popup.css
@@ -63,7 +63,7 @@
 }
 
 #login-popup-button, #create-account-button{
-    background-color: #091f41;
+    background-color: #0e224d;
     color: #fff;
     border-style: none;
     border-radius: 50px;
