--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -72,9 +72,14 @@
 
     <div id="card-container" class="card-container">
     </div>
+    <footer>
+
+    </footer>
 </main>
 
-<script src="/js/script.js"></script>
-<script src="/js/contact_service.js"></script>
+<script  src="/js/common/header.js"></script>
+<script  type="module" src="/js/index/index.js"></script>
+
+
 </body>
 </html>
