--- a/cinema/src/main/resources/static/css/slider.css
+++ b/cinema/src/main/resources/static/css/slider.css
@@ -1,7 +1,7 @@
 .slider-container {
+    margin: 50px 0 80px 0;
     position: relative;
-    max-width: 82rem;
-    margin: 0 auto 35px;
+    max-height: 400px;
 }
 
 .slider {
@@ -12,8 +12,11 @@
     scroll-behavior: smooth;
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
 }
-
+.slider-wrapper{
+    max-height: 400px;
+}
 .slider img {
+    max-height: 400px;
     flex: 1 0 100%;
     scroll-snap-align: start;
     object-fit: cover;
