--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -22,6 +22,7 @@ body {
     height: 480px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px black;
+    transition: transform 0.3s ease-out;
     overflow: hidden;
 }
 
@@ -30,48 +31,69 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.3s ease-out;
+    transition: transform 0.6s ease-out;
 }
 
 .card-body {
+    width: 20rem;
+    height: 480px;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 1em;
-    background-color: rgba(217, 217, 217, 0.8);
-    opacity: 0;
+    background-color: rgba(161, 161, 161, 0.85);
     transition: opacity 0.3s ease-out;
+    opacity: 0;
     z-index: 1;
     display: flex;
     flex-direction: column;
 }
 
-.card-body h4 {
-    margin-bottom: 20px;
-    font-size: 1.5rem;
+.film-title{
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 5px;
+    font-size: 1.3rem;
     text-align: center;
 }
 
-.card-body p {
-    margin: 0.5em 0;
-    font-size: 1.2rem;
+.card:hover img {
+    transform: scale(1.1);
+
 }
 
-.card-body .fat {
-    font-size: 1.5rem;
+/*.card-body p {
+    padding-left: 20px;
+    margin: 10px;
+    font-size: 1.2rem;
+}*/
+.description{
+    padding: 5px 0 0 30px;
+    font-size: 1.05rem;
+}
+
+.info-type {
+    padding: 40px 0 0 30px;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
-.card-body .centered {
+.date {
     margin-top: 80px;
     text-align: center;
+    font-weight: bold;
 }
 
-.card:hover .card-body {
+.card-body:hover {
     opacity: 1;
+    transition: opacity 0.3s ease-out;
+
 }
+.card:hover {
+    transform: scale(1.1);
+
+}
+
 
 
 .movieBtn {
@@ -144,5 +166,7 @@ body {
     background-color: rgba(100, 100, 100, 0.2);
     border-radius: 0;
 }
-.login-popup i{
+
+footer{
+    height: 100px;
 }
