--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
 <body>
 <div id="background-popup"></div>
 <header>
-    <img src="https://cdn.discordapp.com/attachments/1094256351284318209/1094280342426374325/Screenshot_2023-04-08_at_1easasdasdasd.11.55.png"
-         alt="logo">
+   <!-- <a href="index.html"></a>-->
+    <img src="/img/logo.png" alt="logo">
     <div class="dropdown">
         <button class="dropbtn">Львів, ТРЦ Мегаполіс</button>
         <div id="cinemas" class="dropdown-content">
