--- a/cinema/src/main/resources/static/css/header.css
+++ b/cinema/src/main/resources/static/css/header.css
@@ -1,10 +1,14 @@
 header{
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: black;
     color: white;
     display: flex;
     justify-content: space-between;
     padding: 16px 0;
     align-items: center;
+    z-index: 2;
 }
 
 header img {
