--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -17,8 +17,9 @@
 <body>
 <div id="background-popup"></div>
 <header>
-   <!-- <a href="index.html"></a>-->
-    <img src="/img/logo.png" alt="logo">
+    <a th:href = "@{/}">
+        <img src="/img/logo.png" alt="logo">
+    </a>
     <div class="dropdown">
         <button class="dropbtn">Львів, ТРЦ Мегаполіс</button>
         <div id="cinemas" class="dropdown-content">
