--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
             <a th:href="@{/movie}">
                 <li>ФІЛЬМИ</li>
             </a>
-            <a th:href="@{showtime}">
+            <a th:href="@{soon}">
                 <li>РОЗКЛАД СЕАНСІВ</li>
             </a>
             <a th:href="@{info}">
@@ -44,20 +44,20 @@
     <button id="main-login-button">Увійти</button>
 </header>
 <div class="login-popup">
-    <form id="login-form" onsubmit="loginUser(event);return false;">
+    <div id="login-form">
         <span class="material-icons" id="close-login-button">close</span>
         <h2>Вхід</h2>
         <input type="email" class="input-field" name="email" id="email" placeholder="Email">
         <input type="password" class="input-field" name="password" id="password" placeholder="Пароль">
-        <input id="login-popup-button" type="submit" value="Увійти">
+        <label id="lb-log"></label>
+        <button id="login-popup-button" onclick="loginUser()">Увійти</button>
         <button id="registration-popup-button">Реєстрація</button>
-
-    </form>
+    </div>
 
 </div>
 
 <div class="registration-popup">
-    <form id="registration-form" onsubmit="resisterNewUser(event);return false;">
+    <div id="registration-form">
         <span class="material-icons" id="close-registration-button">close</span>
         <h2>Реєстрація</h2>
         <input type="text" class="input-field" name="name" id="registration-name" placeholder="Імʼя">
@@ -66,9 +66,10 @@
         <input type="password" class="input-field" name="password" id="registration-password" placeholder="Пароль">
         <input type="password" class="input-field" name="repeat-password" id="repeat-password"
                placeholder="Підтвердження пароля">
-        <input type="submit" id="create-account-button" value="Зареєструватися">
+        <label id="lb-reg"></label>
+        <button id="create-account-button" onclick="resisterNewUser()">Зареєструватися</button>
         <button id="login-form-button"> Увійти в обліковий запис</button>
-    </form>
+    </div>
 </div>
 
 <main>
