add Actor, Director classes

--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -27,16 +27,16 @@
     </div>
     <nav>
         <ul>
-            <a th:href="@{soon}">
+            <a th:href="@{/soon}">
                 <li>СКОРО</li>
             </a>
             <a th:href="@{/movie}">
                 <li>ФІЛЬМИ</li>
             </a>
-            <a th:href="@{soon}">
+            <a th:href="@{/soon}">
                 <li>РОЗКЛАД СЕАНСІВ</li>
             </a>
-            <a th:href="@{info}">
+            <a th:href="@{/info}">
                 <li>ПРО НАС</li>
             </a>
         </ul>
