Big update special for Vasyl

--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -68,7 +68,7 @@ body{
   
   .dropdown {
     position: relative;
-    display: inline-block;
+    display: inline;
   }
   
   .dropdown-content {
