--- a/cinema/src/main/resources/static/css/header.css
+++ b/cinema/src/main/resources/static/css/header.css
@@ -1,10 +1,11 @@
 header{
+    position: relative;
     background-color: black;
     color: white;
     display: flex;
     justify-content: space-between;
-    padding: 16px 0;
     align-items: center;
+    width: 100%;
 }
 
 header img {
@@ -13,21 +14,28 @@ header img {
 }
 
 header nav{
-    width: 60%;
+    width: 70%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /* width: 100%; */
 }
 
 header ul{
+    width: 60%;
     display: flex;
+    justify-content: space-evenly;
     margin-left: 20%;
 }
 
 header ul li{
     list-style: none;
-    margin-left: 20px;
 }
 
 header button{
-    margin-right: 40px;
+    margin-right: 4%;
     padding: 12px 26px;
     background-color: white;
     border: 0;
